deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app
  namespace: tinlam-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      serviceAccountName: my-app-serviceaccount
      containers:
      - name: python-app
        image: docker.io/edgelogistics/python-3.9-slim:latest
        ports:
        - containerPort: 5000
